fixing final dimensions on tablet size for blog home page

--- a/styleblog.css
+++ b/styleblog.css
@@ -220,7 +220,7 @@ footer {
 @media screen and (min-width: 700px) {
     
     html {
-        height: 1300px;
+        height: 1650px;
     }
 
     body { 
